# djangocms-installer

./: .checkignore  .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  config.ini.sample  coverage.rc  pyproject.toml  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tasks.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: publish.yml  test.yml
aldryn-installer/: __init__.py
aldryn_installer/: __init__.py  compat.py  main.py  utils.py
aldryn_installer/config/: __init__.py  data.py  internal.py  settings.py  urls.py
aldryn_installer/django/: __init__.py
aldryn_installer/install/: __init__.py
aldryn_installer/share/: index.html  page.html  sidebar_left.html  sidebar_right.html  starting_page.json  starting_page.py
aldryn_installer/share/templates/basic/: fullwidth.html  (+1 more)
changes/: 362.feature  363.feature  364.feature  376.feature  377.feature  384.bugfix  388.feature  391.bugfix
djangocms_installer/: __init__.py  __main__.py  compat.py  main.py  utils.py
djangocms_installer/config/: __init__.py  data.py  ini.py  internal.py  settings.py  urls.py  urls_i18n.py  urls_noi18n.py
djangocms_installer/django/: __init__.py
djangocms_installer/install/: __init__.py
djangocms_installer/share/: create_user.py  starting_page.py
docs/: autodoc.rst  conf.py  djangocms_installer.config.rst  djangocms_installer.django.rst  djangocms_installer.install.rst  djangocms_installer.rst  djangocms_installer.share.rst  faq.rst  index.rst  installation.rst  libraries.rst  modules.rst  reference.rst  usage.rst
tests/: __init__.py  base.py  config.py  django.py  main.py
tests/data/: extra_settings.py
tests/fixtures/configs/: config-01.ini  config-02.ini  config-03.ini  config-04.ini  config-05.ini  config-06.ini  config-07.ini  config-08.ini  config-09.ini  config-09b.ini  config-10.ini  config-10b.ini  config-11.ini  config-12.ini  config-13.ini  config-14.ini  config-15.ini  config-16.ini  config-17.ini  config-18.ini  config-19.ini  config-20.ini  config-21.ini  config-22.ini  config-23.ini  config-24.ini  config-25.ini  config-26.ini  config-27.ini  config-28.ini  config-29.ini  config-30.ini  config-32.ini
tests/test_templates/: base.html  left.html  right.html
(+10 files in other folders)
