[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = ["py27"]
include = 'app_helper/*py'

[tool.towncrier]
package = "app_helper"
directory = "changes"
filename = "HISTORY.rst"
title_format = "{version} ({project_date})"
