[bumpversion]
current_version = 2.0.1.dev0
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	a
	b
	rc
	gamma

[bumpversion:file:djangocms_installer/__init__.py]

[metadata]
name = djangocms-installer
version = attr: djangocms_installer.__version__
url = https://github.com/nephila/djangocms-installer
project_urls =
	Documentation = https://djangocms-installer.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Command to easily bootstrap django CMS projects
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Topic :: Software Development

[options]
include_package_data = True
install_requires =
	dj-database-url>=0.4
	six
	tzlocal
    pytz
setup_requires =
	setuptools
packages = find:
python_requires = >=3.5
test_suite = tests
zip_safe = False

[options.package_data]
* = *.txt, *.rst
djangocms_installer = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.entry_points]
console_scripts =
	djangocms = djangocms_installer.main:execute

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
